# farmRisk_Bias_Correction_Model

./: .gitattributes  .gitignore  Dockerfile  README.md  RUNTIME_NOTES.md  pyproject.toml  requirements.txt
.github/workflows/: sync_to_hf.yml
app/: cpcLeakyBucket.py  forcast.py  forcastModel.py  index.html  main.py  soilMoisture.py  soilMoistureModel.py  stats.py
data/: grid_elevation.parquet  master_calibration_1D.csv  om_forecast_all.parquet
data/IMD_parquets/: imd_pcp_daily.parquet  imd_tmax_daily.parquet  imd_tmin_daily.parquet
data/training_data/: training_pcp_daily.parquet  training_tmax_daily.parquet  training_tmin_daily.parquet
