[project]
name = "forcastmodel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "numpy>=2.0.0",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "uvicorn[standard]>=0.30.0",
    "xgboost>=3.3.0",
]
